# video_library

./: .env  .gitignore  README.md  docker-compose.yml
client/: app.py  pyproject.toml  requirements.txt
client/templates/: add_video.html  index.html  login.html  register.html  video_library.html
data/: anselme.json  users.json
server/: Dockerfile  app.py  pyproject.toml  requirements.txt
